# agent-terrace

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
client/: index.html  package.json  vite.config.js
client/public/: manifest.webmanifest  sw.js
client/src/: App.svelte  LetterComposer.svelte  LettersView.svelte  ansi.js  ansi.test.js  api.js  api.test.js  letters.js  letters.test.js  main.js  styles.css
docs/: ARCHITECTURE.md  DESIGN.md  ROADMAP.md
src/: lib.rs  main.rs
tests/: api.rs
